--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt">
   <head>
     <meta charset="UTF-8" />
 
-    <link rel="shortcut icon" href="/icon.png" type="image/png">
+    <link rel="shortcut icon" href="/icon.png" type="image/png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dungeon Finder</title>
   </head>
-  <body class="bg-zinc-950 text-zinc-50 antialiased">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
